--- a/index.html
+++ b/index.html
@@ -19,27 +19,33 @@
         <section id="calculator">
             <form id="form">
                 <h1 id="title">
-                    Calculadora de IMC
+                    Calculadora - IMC
                 </h1>
 
                 <div class="input-box">
-                    <label for="weight">Peso em Kg:</label>
+                    <label for="weight">
+                    Peso em Kg:
+                    </label>
                     <div class="input-field">
                         <i class="fa-solid fa-weight-scale"></i>
                         <input type="number" step="0.01" id="weight" required>
                         <span>Kg</span>
+                    </div>
+                </div>
 
                 <div class="input-box">
-                    <label for="height">Peso em Kg:</label>
+                    <label for="height">
+                    Altura em metros:
+                    </label>
                     <div class="input-field">
                         <i class="fa-solid fa-ruler"></i>
                         <input type="number" step="0.01" id="height" required>
                         <span>M</span>
                     </div>
                 </div>
-
-                <button id="calculate">Calcular</button>
-
+                <button id="calculate">
+                    Calcular
+                </button>
             </form>
 
             <div id="infos" class="hidden">
@@ -63,5 +69,8 @@
             
         </section>
     </main>
+
+    <script src="assets/js/script.js"></script>
+    
 </body>
 </html>
